--- a/requirements_api.txt
+++ b/requirements_api.txt
@@ -1,7 +1,30 @@
+# LightRAG API Server Requirements
+
+# Core dependencies
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-python-multipart==0.0.6
 pydantic==2.5.0
-google-generativeai==0.3.2
+python-multipart==0.0.6
+
+# LightRAG dependencies
+lightrag
+
+# Google Gemini
+google-genai==0.3.2
+
+# Async and utilities
+nest-asyncio==1.5.8
+python-dotenv==1.0.0
+
+# Data processing
 numpy==1.24.3
-lightrag 
+sentence-transformers==2.2.2
+
+# HTTP requests
+requests==2.31.0
+
+# Tokenization
+sentencepiece==0.1.99
+
+# Logging and monitoring
+python-json-logger==2.0.7 
