--- a/requirements_api.txt
+++ b/requirements_api.txt
@@ -1,7 +1,10 @@
+# LightRAG API Server Requirements
+
+# Core dependencies
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-python-multipart==0.0.6
 pydantic==2.5.0
-google-generativeai==0.3.2
-numpy==1.24.3
-lightrag 
+python-multipart==0.0.6
+
+# LightRAG dependencies
+lightrag
