--- a/.env
+++ b/.env
@@ -43,7 +43,7 @@ TOKEN_EXPIRE_HOURS=4
 
 ### API-Key to access LightRAG Server API
 # LIGHTRAG_API_KEY=your-secure-api-key-here
-# WHITELIST_PATHS=/health,/api/*
+WHITELIST_PATHS=/health,/api/*,/documents/pipeline_status
 
 ########################
 ### Query Configuration
@@ -70,7 +70,7 @@ GEMINI_TOP_K=10
 ########################
 # Gemini Embedding Model
 EMBEDDING_MODEL=gemini-embedding-001
-EMBEDDING_DIM=768
+EMBEDDING_DIM=3072
 EMBEDDING_MAX_TOKEN_SIZE=8192
 
 ########################
