--- a/env.example
+++ b/env.example
@@ -129,9 +129,14 @@ LLM_BINDING_API_KEY=your_api_key
 ####################################################################################
 ### Embedding Configuration (Should not be changed after the first file processed)
 ####################################################################################
-### Embedding Binding type: openai, ollama, lollms, azure_openai, jina
+### Embedding Binding type: openai, ollama, lollms, azure_openai, jina, gemini
 
-### see also env.ollama-binding-options.example for fine tuning ollama
+### For Gemini embeddings (uses same GEMINI_API_KEY)
+# EMBEDDING_BINDING=gemini
+# EMBEDDING_MODEL=text-embedding-001
+# EMBEDDING_DIM=3072
+
+### For other providers (e.g., Ollama)
 EMBEDDING_BINDING=ollama
 EMBEDDING_MODEL=bge-m3:latest
 EMBEDDING_DIM=1024
@@ -150,7 +155,7 @@ EMBEDDING_BINDING_HOST=http://localhost:11434
 # AZURE_EMBEDDING_DEPLOYMENT=text-embedding-3-large
 # AZURE_EMBEDDING_API_VERSION=2023-05-15
 # AZURE_EMBEDDING_ENDPOINT=your_endpoint
-# AZURE_EMBEDDING_API_KEY=your_api_key
+# AZURE_EMBEDDING_API_KEY=your_api_key  # Only for Azure OpenAI embeddings
 
 ### Jina AI Embedding
 EMBEDDING_BINDING=jina
