--- a/.env
+++ b/.env
@@ -109,7 +109,7 @@ TOP_P_SAMPLING=0.9
 LLM_BINDING=gemini
 LLM_MODEL=gemini-2.0-flash
 ### Gemini API Configuration
-GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_API_KEY=AIzaSyBybth8NfYlNxjT8hfP-whMn9q2rDV657I
 GEMINI_BASE_URL=https://generativelanguage.googleapis.com
 
 ### Advanced Gemini Configuration
@@ -130,8 +130,7 @@ EMBEDDING_BINDING=gemini
 EMBEDDING_MODEL=text-embedding-001
 EMBEDDING_DIM=3072
 EMBEDDING_BATCH_SIZE=32
-### Gemini embedding API configuration
-EMBEDDING_API_KEY=your_gemini_api_key_here
+### Gemini embedding configuration (uses same GEMINI_API_KEY)
 EMBEDDING_BASE_URL=https://generativelanguage.googleapis.com
 
 ### Alternative: If you want to use other embedding providers
