--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ pydantic>=2.5.0
 pydantic-settings>=2.1.0
 
 # Dynamic package management and utilities
-pipmaster>=1.0.0
+pipmaster
 ascii-colors>=0.3.0
 pyuca>=1.2.0
 
@@ -35,6 +35,7 @@ scikit-learn>=1.3.0
 transformers>=4.35.0
 
 # Vector Databases and Storage
+nano-vectordb>=0.4.14
 faiss-cpu>=1.7.4
 qdrant-client>=1.6.0
 pymilvus>=2.3.0
@@ -109,6 +110,9 @@ gunicorn>=21.2.0
 
 # Memory optimization
 # jemalloc>=1.0.3
+
+# Authentication (for API auth features)
+PyJWT>=2.8.0
 
 # Performance profiling
 # py-spy>=0.3.14
